[package]
name = "hmmcli"
version = "0.5.2"
authors = ["Sam Rose <hello@samwho.dev>"]
edition = "2018"
license = "MIT"
keywords = ["notes", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/samwho/hmm"
description = "A small command-line note-taking app"
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "**/*.rs",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
csv = "1.1"
quick-csv = "0.1"
chrono = "0.4"
dirs = "5.0.1"
itertools = "0.10.0"
textwrap = { version = "0.16.0", features = ["terminal_size", "smawk"] }
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.1"
structopt = { version = "0.3", default-features = false }
fs2 = "0.4"
rand = "0.8.3"
handlebars = "4.3.6"
regex = "1.3"
lipsum = "0.9.0"
indicatif = "0.17.3"
lazy_static = "1"
shellwords = "1"
termimad = "0.23.0"
human-panic = "1"

[dev-dependencies]
test-case = "3.1.0"
assert_cmd = "2.0.11"
escargot = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "hmm"
path = "src/bin/hmm.rs"

[[bin]]
name = "hmmq"
path = "src/bin/hmmq.rs"

[[bin]]
name = "hmmdg"
path = "src/bin/hmmdg.rs"

[[bin]]
name = "hmmp"
path = "src/bin/hmmp.rs"
